Style announcements card within content section with correct font-size, colors and spacing using flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -497,15 +497,38 @@ span.priv {
 }
 
 .announce-list li {
-  border-bottom: 1px solid #d2d2d2;
+  /* border-bottom: 1px solid #d2d2d2; */
   color: var(--grey-color);
+  padding: 0 6px;
+  margin: 0 6px;
+}
+.announce-list li:first-child {
+  margin-top: 12px;
+}
+.announce-list li:last-child {
+  border: none;
+  margin-bottom: 6px;
+  padding-bottom: 0;
 }
 
 .announce-list li h5 {
   color: var(--black-color);
   font-size: 0.9rem;
   font-weight: var(--weight-500);
+  margin-bottom: 5px;
 }
 .announce-list li p {
   font-size: 0.77rem;
+  line-height: 1.1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.announce-list hr {
+  background-color: #d2d2d2;
+  height: 1px;
+  border: 0;
+  margin: 6px;
 }
